[gd_scene load_steps=23 format=3 uid="uid://ddr5uibpboafl"]

[ext_resource type="Script" path="res://Scenes/Player/player.gd" id="1_qhetf"]
[ext_resource type="AudioStream" uid="uid://ca3701qcvfxco" path="res://Sounds/SFX/sandwalking.wav" id="2_01y4q"]
[ext_resource type="AudioStream" uid="uid://82lw68qvag77" path="res://Sounds/SFX/sandwalkingcrunchy.wav" id="2_3kc5s"]
[ext_resource type="PackedScene" uid="uid://d0xue5beqlj58" path="res://UI/friend_ui.tscn" id="2_o6uxq"]
[ext_resource type="Shader" path="res://Scenes/Eye.gdshader" id="3_7iiy1"]
[ext_resource type="Texture2D" uid="uid://dw1gxyrkxxmop" path="res://UI/LeftClick.png" id="4_43bjq"]
[ext_resource type="Texture2D" uid="uid://dnlkdn2iq35bu" path="res://VFX/BlurCircleMask.png" id="5_gbutn"]
[ext_resource type="Script" path="res://Scenes/Player/foot_steps.gd" id="5_p7xcw"]
[ext_resource type="Script" path="res://UI/map_marker.gd" id="6_7gs45"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gpcct"]
radius = 0.35
height = 1.6

[sub_resource type="BoxShape3D" id="BoxShape3D_qvofk"]
size = Vector3(0.2, 0.2, 5)

[sub_resource type="Animation" id="Animation_mb2ef"]
resource_name = "Crouch"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.05, 0)]
}

[sub_resource type="Animation" id="Animation_wwsa6"]
resource_name = "Crouch_Walk"
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.05, 0), Vector3(0, 0, 0), Vector3(0, 0.05, 0), Vector3(0, 0, 0), Vector3(0, 0.05, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../Footsteps:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.5, -0.8, 0), Vector3(0.5, -0.8, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../Footsteps")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [ExtResource("2_3kc5s"), 0.9, 1.1],
"method": &"rand_pitch"
}, {
"args": [ExtResource("2_3kc5s"), 0.9, 1.1],
"method": &"rand_pitch"
}]
}

[sub_resource type="Animation" id="Animation_jqaxn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.45, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../Footsteps:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.5, -0.8, 0)]
}

[sub_resource type="Animation" id="Animation_rcl2h"]
resource_name = "Stand"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.25, 0)]
}

[sub_resource type="Animation" id="Animation_304bb"]
resource_name = "Walk"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.25, 0), Vector3(0, 0.2, 0), Vector3(0, 0.25, 0), Vector3(0, 0.2, 0), Vector3(0, 0.25, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../Footsteps:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.5, -0.8, 0), Vector3(0.5, -0.8, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../Footsteps")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.460176),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [ExtResource("2_01y4q"), 0.9, 1.1],
"method": &"rand_pitch"
}, {
"args": [ExtResource("2_01y4q"), 0.9, 1.1],
"method": &"rand_pitch"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bm6rr"]
_data = {
"Crouch": SubResource("Animation_mb2ef"),
"Crouch_Walk": SubResource("Animation_wwsa6"),
"RESET": SubResource("Animation_jqaxn"),
"Stand": SubResource("Animation_rcl2h"),
"Walk": SubResource("Animation_304bb")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ro8sy"]
shader = ExtResource("3_7iiy1")
shader_parameter/alpha = 1.0

[sub_resource type="Animation" id="Animation_ogje8"]
resource_name = "Asleepen"

[sub_resource type="Animation" id="Animation_skro6"]
resource_name = "Awaken"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/alpha")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../CameraPivot:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-1.5708, 0, 0), Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../CameraPivot/Camera:fov")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [50.0, 75.0]
}

[sub_resource type="Animation" id="Animation_yj3lt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/alpha")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../CameraPivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1.5708, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../CameraPivot/Camera:fov")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [30.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7041i"]
_data = {
"Asleepen": SubResource("Animation_ogje8"),
"Awaken": SubResource("Animation_skro6"),
"RESET": SubResource("Animation_yj3lt")
}

[node name="Player" type="CharacterBody3D"]
collision_layer = 5
script = ExtResource("1_qhetf")

[node name="Collision" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_gpcct")

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -3.61999e-06, 1, 0, -1, -3.61999e-06, 0, 0.25, 0)

[node name="Camera" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.45, 0)
cull_mask = 1048569
fov = 30.0
far = 100.0

[node name="LookCast" type="ShapeCast3D" parent="CameraPivot/Camera"]
shape = SubResource("BoxShape3D_qvofk")
target_position = Vector3(0, 0, -2.5)
collision_mask = 2

[node name="CameraAnim" type="AnimationPlayer" parent="CameraPivot/Camera"]
libraries = {
"": SubResource("AnimationLibrary_bm6rr")
}
playback_default_blend_time = 0.5

[node name="GUI" type="CanvasLayer" parent="."]

[node name="FriendUI" parent="GUI" instance=ExtResource("2_o6uxq")]

[node name="Eye" type="ColorRect" parent="GUI"]
material = SubResource("ShaderMaterial_ro8sy")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="EyeAnim" type="AnimationPlayer" parent="GUI/Eye"]
libraries = {
"": SubResource("AnimationLibrary_7041i")
}
autoplay = "Awaken"

[node name="LeftClick" type="TextureRect" parent="GUI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.35, 0.35)
pivot_offset = Vector2(64, 64)
texture = ExtResource("4_43bjq")
expand_mode = 2
stretch_mode = 3

[node name="Footsteps" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, -0.8, 0)
volume_db = -10.0
panning_strength = 3.0
bus = &"SFX"
script = ExtResource("5_p7xcw")

[node name="MapMarker" type="Sprite3D" parent="."]
visible = false
layers = 4
cast_shadow = 0
modulate = Color(0.645355, 0, 0.166888, 1)
pixel_size = 0.001
billboard = 1
double_sided = false
no_depth_test = true
fixed_size = true
texture = ExtResource("5_gbutn")
script = ExtResource("6_7gs45")
